add brands migration,seeder,crud and test
