# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\api\v1\AdminUserController;
+use App\Http\Controllers\api\v1\BrandController;
 use App\Http\Controllers\api\v1\UserController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -31,6 +32,10 @@ Route::prefix('v1')->group(function () {
      Route::post('user/login', [UserController::class, 'login']);
      Route::post('user/create', [UserController::class, 'create']);
      Route::get('user/logout', [UserController::class, 'logout']);
+
+      //Brand
+    Route::get('brands', [BrandController::class, 'index']);
+    Route::get('brand/{uuid}', [BrandController::class, 'show']);
  
 
     Route::middleware(['admin.side'])->group(function () {
@@ -44,5 +49,10 @@ Route::prefix('v1')->group(function () {
         Route::get('user', [UserController::class, 'show_user']);
         Route::put('user/edit', [UserController::class, 'edit']);
         Route::Delete('user', [UserController::class, 'delete']);
+
+        Route::post('brand/create', [BrandController::class, 'create']);
+        Route::match(['put', 'patch'], 'brand/{uuid}', [BrandController::class, 'edit']);
+        Route::delete('brand/{uuid}', [BrandController::class, 'delete']);
+        Route::delete('category/{uuid}', [CategoryController::class, 'delete']);
     });
 });
